<package>
  <name>jsk_choreonoid</name>
  <version>0.1.0</version>
  <description>
This program has been developed by Kunio Kojima.
	</description>
  <maintainer email="k-kojima@jsk.t.u-tokyo.ac.jp">Kunio Kojima</maintainer>

  <author>Kunio Kojima</author>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/jsk_choreonoid</url>

  <buildtool_depend>catkin</buildtool_depend>

	<build_depend>choreonoid</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>choreonoid</run_depend>

  <export>
  </export>
</package>
