<package>
  <name>jsk_choreonoid</name>
  <version>0.1.0</version>
  <description>
   <p>An <a href = "http://choreonoid.org/en/">Choreonoid</a>-based plugin. This package is the most tailored for humanoid (biped) robots for historical reason.</p>
  </description>

  <license>BSD</license>
  <maintainer email="k-kojima@jsk.imi.i.u-tokyo.ac.jp">Kunio Kojima</maintainer>
  <author>Kunio Kojima</author>

  <url type="website">http://ros.org/wiki/jsk_choreonoid</url>
  <url type="repository">https://github.com/kindsenior/jsk_choreonoid</url>
  <url type="bugtracker">https://github.com/kindsenior/jsk_choreonoid/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>choreonoid</build_depend>
  <build_depend>hrpsys</build_depend>

  <run_depend>choreonoid</run_depend>

  <export>
  </export>
</package>
